<resources>
    <string name="app_name">SecondProject</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="text_color">Text Color</string>
    <string name="color_value">Black</string>
    <string name="text_size">Text size</string>
    <string name="size_value">14sp</string>
    <string name="notification_radius">Notification Radius</string>
    <string name="radius_value">100m</string>
    <string name="settingsBack">Back</string>
    <string name="galleryBack">Back</string>
    <string name="photo">TODO</string>
</resources>
