<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/photoButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/button1"
        android:text="@string/take_a_photo"/>

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/button1"
        android:text="@string/gallery"/>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/button1"
        android:text="@string/settings"/>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/button1"
        android:text="@string/exit"/>



</LinearLayout>